Fix spinner HTML structure in index.html

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
         <div class="spinner-container">
             <div class="futuristic-spinner"></div>
             <p class="spinner-text">กำลังเข้าสู่ระบบ...</p>
+            <div class="progress-bar">
+                <div class="progress-fill"></div>
+            </div>
+            <div class="progress-text">0%</div>
         </div>
     </div>
 
